<resources>
    <string name="tencent_share_id">tencent100836790</string>
    <string name="version">版本号：1.0    英语口语秀</string>
    <string name="sec_verify_demo_one_key_login">一键登录</string>
    <string name="sec_verify_demo_agreement_text_all">用户协议</string>
    <string name="sec_verify_demo_mob_service">隐私条款</string>
    <string name="sec_verify_demo_agreement_text_start">登录即表明同意</string>
    <string name="sec_verify_demo_agreement_text_end"> </string>
    <string name="sec_verify_demo_other_login">其它账号登录</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-0386301933791128/6590062319</string>
    <string name="banner_ad_app_id" translatable="false">ca-app-pub-0386301933791128~5113329119</string>
    <string name="umeng_channel_normal" translatable="false">normal</string>
    <string name="user_protocol">1.为了更方便您使用我们的软件，我们会根据您使用具体功能时，申请必要的权限，如相机，位置，麦克风，存储权限等，可以点击下面的链接了解详情。
        \n2.使用本app需要您了解并同意用户协议及隐私政策，点击同意即代表您已经阅读并且同意该协议。</string>
    <string name="user_permission_protocol">1.为了更方便您使用我们的软件，我们会根据您使用具体功能时，申请必要的权限，如相机，位置，麦克风，存储权限等，当然您也可以在应用的设置页面进行权限的管理。
        \n2.使用本app需要您了解并同意用户协议及隐私政策，点击同意即代表您已经阅读并且同意该协议</string>
    <string name="user_mini_protocol">1.为了更方便您使用我们的软件，我们会根据您使用具体功能时，申请必要的权限，如相机，位置，麦克风，存储权限等，可以点击下面的链接了解详情。
        \n2.我们的产品集成友盟+SDK，友盟+SDK需要收集您的设备Mac地址、获取用户的软件安装列表以提供统计分析服务，友盟隐私权政策链接。
        \n3.我们的产品集成MobTech短信/认证服务，需要终端用户提供手机号码或授权MobTech获取设备标识等相关信息，相关隐私权政策链接。
        \n4.使用本app需要您了解并同意用户协议及隐私政策，点击同意即代表您已经阅读并且同意该协议</string>
    <string name="area_renjiao">人教版使用地区：\n\n
安徽省: 安庆市 毫州市 池州市 滁州市 阜阳市 淮北市 淮南市 黄山市 六安市 宿州市 铜陵市 芜湖市 宣城市\n\n
北京市\n\n
河北省: 沧州市 承德市 邯郸市 衡水市 廊坊市 秦皇岛市 石家庄市\n\n
福建省: 厦门市\n\n
甘肃省: 甘南藏族自治州 嘉峪关市 金昌市 兰州市 临夏回族自治州 陇南市 平凉市 庆阳市 武威市 张掖市\n\n
广东省: 潮州市 东莞市 河源市 揭阳市 梅州市 汕头市 汕尾市 韶关市 阳江市 湛江市 肇庆市 中山市\n\n
广西壮族自治区: 百色市 北海市 防城港市 贵港市 河池市 贺州市 玉林市\n\n
贵州省: 安顺市 贵阳市 六盘水市 黔东南苗族侗族自治州 黔南布依族苗族自治州 遵义市\n\n
海南省: 保亭黎族苗族自治县 澄迈县 儋州市 临高县 陵水黎族自治县 屯昌县 万宁市 文昌市 五指山市\n\n
河南省: 安阳市 鹤壁市 济源市 焦作市 开封市 洛阳市 许昌市 郑州市\n\n
黑龙江省: 大兴安岭地区 哈尔滨市 鹤岗市 黑河市 佳木斯市 牡丹江市 齐齐哈尔市 绥化市\n\n
湖北省: 鄂州市 黄冈市 黄石市 荆门市 荆州市 十堰市 随州市 天门市 武汉市 仙桃市 襄阳市 孝感市 宜昌市\n\n
湖南省：长沙市 常德市 郴州市 怀化市 娄底市 邵阳市 湘潭市 湘西土家族苗族自治州 益阳市 永州市 岳阳市 张家界市
        株洲市\n\n
吉林省：白城市 白山市 长春市 吉林市 辽源市 四平市 松原市 通化市 延边朝鲜族自治州\n\n
江西省：抚州市 赣州市 吉安市 景德镇市 九江市 南昌市 萍乡市 上饶市 新余市 宜春市 鹰潭市\n\n
辽宁省：鞍山市 本溪市 朝阳市 丹东市 抚顺市 葫芦岛市 锦州市 辽阳市 盘锦市 铁岭市\n\n
内蒙古自治区：阿拉善盟 巴彦淖尔市 包头市 乌海市 乌兰察布市 锡林郭勒盟 兴安盟\n\n
宁夏回族自治区：固原市 银川市 中卫市\n\n
青海省：海北藏族自治州 海东市 海南藏族自治州 海西蒙古族藏族自治州 西宁市\n\n
山东省：滨州市 菏泽市 济南市 济宁市 临沂市 青岛市 日照市 枣庄市\n\n
山西省：长治市 大同市 晋城市 晋中市 临汾市 吕梁市 朔州市 太原市 忻州市 阳泉市 运城市\n\n
陕西省：安康市 宝鸡市 西安市 延安市 榆林市\n\n
四川省：阿坝藏族羌族自治州 巴中市 成都市 达州市 德阳市 甘孜藏族自治州 广安市 广元市 凉山彝族自治州 泸州市 眉山市 绵阳市
        内江市 南充市 攀枝花市 遂宁市 雅安市 宜宾市 资阳市 自贡市\n\n
云南省: 楚雄彝族自治州 大理白族自治州 红河哈尼族彝族自治州 昆明市 临沧市 怒江傈僳族自治州 普洱市 曲靖市 文山壮族苗族自治州
        玉溪市\n\n
浙江省：杭州市 湖州市 丽水市 宁波市 绍兴市 台州市 舟山市\n\n
重  庆：重庆市</string>
    <string name="area_waiyan">外研版使用地区:\n\n
安徽省: 合肥市\n\n
广东省: 佛山市 惠州市 江门市 茂名市\n\n
广西壮族自治区: 桂林市 柳州市 南宁市\n\n
海南省: 定安县 东方市 海口市 琼海市 琼中黎族苗族自治县 三亚市\n\n
黑龙江省: 大庆市 双鸭山市\n\n
辽宁省：大连市 阜新市\n\n
内蒙古自治区: 鄂尔多斯市 呼和浩特市\n\n
宁夏回族自治区：石嘴山市 吴忠市\n\n
山东省: 德州市 聊城市 潍坊市\n\n
陕西省: 商洛市 渭南市\n\n
四川省: 广安市 乐山市\n\n
天  津: 天津市\n\n
浙江省: 嘉兴市 金华市 衢州市 温州市\n\n
</string>
    <string name="area_beishi">北师版使用地区：\n\n
北京市</string>
    <string name="area_renai">仁爱版使用地区：\n\n
福建省: 福州市 龙岩市 南平市 宁德市 莆田区 泉州市 三明市 漳州市\n\n
广东省: 清远市 云浮市\n\n
河北省: 邢台市\n\n
贵州省: 毕节市 黔西南布依族苗族自治州 铜仁市\n\n
河南省: 漯河市 南阳市 平顶山市 濮阳市 三门峡市 新乡市 信阳市 仁爱版 驻马店市\n\n
湖北省: 恩施土家族苗族自治州 潜江市 咸宁市\n\n
湖南省: 衡阳市\n\n
内蒙古自治区: 赤峰市 呼伦贝尔市 通辽市\n\n
云南省: 保山市 德宏傣族景颇族自治州 丽江市 西双版纳傣族自治州 昭通市</string>
    <string name="area_jiban">冀教版使用地区：\n\n
河北省: 保定市 唐山市 张家口市\n\n
甘肃省: 白银市 定西市 酒泉市天水市\n\n
陕西省: 汉中市\n\n
陕西省: 铜川市 咸阳市</string>
    <string name="area_yilin">牛津译林版使用地区：\n\n
安徽省: 蚌埠市 马鞍山\n\n
广西壮族自治区: 崇左市 来宾市 钦州市 梧州市\n\n
河南省: 商丘市\n\n
江苏省：常州市 淮安市 连云港市 南京市 南通市 苏州市 宿迁市 泰州市 无锡市 徐州市 盐城市 扬州市 镇江市</string>
    <string name="area_lujiao">鲁教版(五四制)使用地区：\n\n
黑龙江省: 鸡西市 七台河市\n\n
山东省: 东营市 莱芜市 泰安市 威海市 烟台市 淄博市</string>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="alert_title">提示</string>
    <string name="alert_btn_ok">确定</string>
    <string name="alert_btn_cancel">取消</string>
    <string name="permission_ok">同意</string>
    <string name="permission_cancel">不同意</string>
    <string name="vip_gongzhonghao">打开微信小程序, 立即领取3天全站会员试用。</string>
    <string name="logout_alert">登录状态可以享受更多爱语服务\n您确定要退出吗？</string>
    <string name="clear_user_alert">账号一旦注销，将删除该账号下存储的一切关于您个人信息及APP使用信息的记录，且不能再继续使用该账号进行登录学习，确定要注销账号吗？</string>
    <string name="clear_user_success">注销成功！</string>
    <string name="clear_user_tip">请输入密码注销账号</string>
    <string name="login_out_success">退出登录成功！</string>
    <string name="main_home_title">课程</string>
    <string name="main_series_book">教材</string>
    <string name="main_tab_word" translatable="false">单词</string>
    <string name="main_moc_title">微课</string>
    <string name="main_video_title">视频</string>
    <string name="main_lesson_title">口语秀</string>
    <string name="main_me_title">我</string>
    <string name="main_top_name">初中学英语</string>
    <string name="study_top_name">配音评测</string>
    <string name="take_english_words">请取英文单词</string>
    <string name="no_explanation">当前单词未找到释义!</string>
    <string name="study_first" translatable="false">当前已经是第一句！</string>
    <string name="study_last" translatable="false">当前已经是最后一句！</string>
    <string name="person_detail_undefined">尚未填写</string>
    <string name="my_voa">我的口语秀</string>
    <string name="local_voa">本地口语秀</string>
    <string name="huawei_name">初中英语背单词</string>
    <string name="hot_video">热门视频</string>
    <string name="anime_voice">动漫配音</string>
    <string name="music_learning">听歌学习</string>
    <string name="more">更多</string>
    <string name="please_check_network">请检查网络是否可用！</string>
    <string name="main_need_network">您没有开启数据网络，使用功能受限！</string>
    <string name="request_fail">请求失败~</string>
    <string name="request_no_more">没有更多数据了。</string>
    <string name="ceshi_error">评测有误，请稍后尝试~</string>
    <string name="ceshi_error_init">评测初始化失败，请检查是否给了录音权限~</string>
    <string name="ceshi_ok">评测成功~</string>
    <string name="welcome">欢迎您：</string>
    <string name="order">订单： </string>
    <string name="payorder">订单：  </string>
    <string name="need_pay_rmb">需要支付人民币：</string>
    <string name="choose_pay_method">选择支付方式</string>
    <string name="pay_confirm">确认支付</string>
    <string name="dialog_action_ok">确定</string>
    <string name="dialog_action_cancel">取消</string>
    <string name="dialog_error_title">Sorry~</string>
    <string name="error_loading">加载错误~</string>
    <string name="empty_content">您要查找的内容不存在~</string>
    <string name="introduce">简介</string>
    <string name="ranking">排行榜</string>
    <string name="recommend">相关</string>
    <string name="comment">评论</string>
    <string name="thumbs_success">点赞成功</string>
    <string name="thumbs_failure">点赞失败</string>
    <string name="vote_success">投票成功</string>
    <string name="vote_failure">投票失败</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failure">评论失败</string>
    <string name="preview_dubbing">预览配音</string>
    <string name="not_dubbing">还没有配音哦，点击话筒试试吧</string>
    <string name="collect">收藏</string>
    <string name="have_collected">已收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failure">收藏失败</string>
    <string name="share">分享</string>
    <string name="difficulty">难度:</string>
    <string name="record_time">{0}s</string>
    <string name="send">发送</string>
    <string name="listening_test">试听</string>
    <string name="dubbing_success">恭喜您完成配音！</string>
    <string name="publish_and_share">发布并分享</string>
    <string name="share_to_friends">分享给好友</string>
    <string name="save_local">保存本地</string>
    <string name="back_to_home_page">返回视频首页</string>
    <string name="share_friend_listen">分享给小伙伴们听听！</string>
    <string name="continue_dubbing">继续配音</string>
    <string name="unfinished_dubbing_tip">您还没有完成配音，是否继续配音？</string>
    <string name="save_draft">保存到草稿箱</string>
    <string name="return_direct">删除草稿并返回</string>
    <string name="hint_top">友情提示:</string>
    <string name="welcome_back">欢迎回来，{0} </string>
    <string name="info_1">请选择要删除的消息</string>
    <string name="info_2">评论加载失败，请检查网络</string>
    <string name="info_3">加载更多</string>
    <string name="info_4">已加载全部评论</string>
    <string name="info_5">目前还没有评论</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_info">您反馈的问题和建议，将是我们进步的动力！</string>
    <string name="feedback_contact">联系方式（有效的邮箱地址）</string>
    <string name="feedback_info_title">反馈或建议</string>
    <string name="feedback_contact_title">联系方式</string>
    <string name="feedback_submit_success">意见反馈已提交！</string>
    <string name="feedback_info_null">反馈信息不能为空！</string>
    <string name="feedback_email_null">请填写email！</string>
    <string name="feedback_effective_email">请填写有效的email！</string>
    <string name="feedback_network_error">网络错误，未能提交反馈！</string>
    <string name="feedback_submitting">提交中，请稍后！</string>
    <string name="login">登录</string>
    <string name="login_title">用户登录</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_check_user_id_null">用户ID不能为空</string>
    <string name="login_check_effective_user_id">请填写有效的用户ID</string>
    <string name="login_check_effective_user_data">请填写有效的用户信息</string>
    <string name="login_check_user_pwd_null">用户密码不能为空</string>
    <string name="login_check_user_pwd_constraint">密码为6~20个字符</string>
    <string name="login_failed">登录失败！请检查网络是否可用！</string>
    <string name="login_find_password">忘记密码？</string>
    <string name="login_register">注册</string>
    <string name="login_username_hint">手机号/用户名/邮箱</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="please_login">请先登录</string>
    <string name="register_title">用户注册</string>
    <string name="register_user_name_hint">3~15位英文、数字或汉字</string>
    <string name="register_confirm_pwd_hint">确认密码</string>
    <string name="register_email_hint">输入常用的邮箱，用于找回密码</string>
    <string name="register_check_username_1">用户名需要3~15字符之间</string>
    <string name="register_check_username_2">字母、数字或者下划线</string>
    <string name="register_check_pwd_1">密码需要6~20字符</string>
    <string name="register_check_pwd_2">大小写字母、数字、符号</string>
    <string name="register_check_pwd_diff">两次密码不匹配！</string>
    <string name="register_check_email_1">用户email不能为空</string>
    <string name="register_check_email_2">请填写有效email方便与您及时联系！</string>
    <string name="register_by_phone"><u>手机注册>>></u>></string>
    <string name="register_username_exist">用户名已存在,请重新填写!</string>
    <string name="register_email_used">邮箱已经被注册</string>
    <string name="register_operating">操作中，请等候</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_next">下一步</string>
    <string name="register_by_email"><u>邮箱方式注册>>>>></u></string>
    <string name="register_by_web"><u>网页注册>>>>></u></string>
    <string name="register_input_phone">请输入你的手机号</string>
    <string name="register_input_code">输入验证码</string>
    <string name="register_code_sending">验证码正在路上，请稍候…</string>
    <string name="register_input_right_num">请输入正确手机号码</string>
    <string name="register_server_send_err">服务器发送短信失败，请重新尝试</string>
    <string name="register_verify_err">验证失败，请重试！</string>
    <string name="register_verify_success">验证成功</string>
    <string name="register_code_err">验证码错误！</string>
    <string name="register_code_sent">验证码已经发送，请等待接收</string>
    <string name="register_code_expired">验证码已过期，请重新尝试</string>
    <string name="register_username_hint">用户名(3-15位英文、数字、中文)</string>
    <string name="about_iyuba">关于</string>
    <string name="vip_center">会员中心</string>
    <string name="iyuba_group">小学英语官方群</string>
    <string name="me_watch_video">美剧大片</string>
    <string name="person_center">个人中心</string>
    <string name="help_use">使用帮助</string>
    <string name="recommend_to_friend">推荐给好友</string>
</resources>