<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:paddingTop="@dimen/status_bar_height">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="@dimen/common_image_size"
            android:layout_height="@dimen/common_image_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/default_avatar" />

        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_image"
            android:layout_centerHorizontal="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/username_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="iyuba"
                android:textColor="@color/WHITE"
                android:textSize="16sp" />
            <ImageView
                android:layout_marginTop="4dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/vip_sign"
                android:src="@drawable/vip"
                android:layout_toRightOf="@id/username_textview"
                android:layout_marginLeft="5dp"
                android:visibility="invisible"
                />

            <TextView
                android:layout_marginBottom="4dp"
                android:id="@+id/money_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_below="@id/username_textview"
                tools:text="钱包余额:0.03元"
                android:textColor="#FFFFFF"
                android:textSize="10sp"/>

            <Button
                android:id="@+id/person_center_btn"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_below="@id/money_textview"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_green_button_light"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp"
                android:text="@string/person_center"
                android:textColor="#fcfcfc" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eee">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/vip_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/vip_center"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/add_iyuba_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/iyuba_group"
                    android:textSize="15dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rr_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/ranking"
                    android:textSize="15dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/my_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="我的积分"
                    android:textSize="15dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/send_books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:text="好评送书"
                    android:textSize="15dp" />
            </RelativeLayout>



            <RelativeLayout

                android:id="@+id/watch_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/me_watch_video"
                    android:textSize="15dp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#aadcdcdc" />

            <RelativeLayout
                android:id="@+id/feedback_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/feedback"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/recommend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/recommend_to_friend"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/help_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/help_use"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/about_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="@string/about_iyuba"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/set_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="visible"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingLeft="24dp"
                    android:paddingTop="15dp"
                    android:text="更新单词"
                    android:textSize="15dp" />
            </RelativeLayout>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
